Convert enum logic to Entity logic + EntityManagers